# tool-sma-extreme-heat-policy

./: .bumpversion.cfg  .bumpversion.toml  .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LEGAL.md  LICENSE  Pipfile  README.md  app.py  cloudbuild.yaml  config.py  conftest.py  main.py  requirements.txt  utils.py
assets/: footer.css  manifest.json  offline.html  points_curves.csv  postcodes.csv  risk_reference_table.parquet  site.webmanifest  sports.csv  sw01.js
backend/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
backend/src/sma_extreme_heat_backend/: main.py
backend/src/sma_extreme_heat_backend/api/: routes.py
backend/src/sma_extreme_heat_backend/calculators/: sports_heat_stress.py
backend/src/sma_extreme_heat_backend/clients/: open_meteo.py
backend/src/sma_extreme_heat_backend/core/: config.py  errors.py
backend/src/sma_extreme_heat_backend/schemas/: home.py
backend/src/sma_extreme_heat_backend/services/: mrt.py  risk_service.py
backend/tests/api/: test_home_risk.py
backend/tests/calculators/: test_sports_heat_stress.py
backend/tests/clients/: test_open_meteo.py
backend/tests/services/: test_mrt.py  test_risk_service.py
components/: current_risk.py  detailed_recommendations.py  dropdown_location.py  dropdown_sport.py  dropdowns.py  forecasts.py  gauge.py  install_button.py  main_recommendations.py  map.py  modal_country_select.py  sport_image.py
frontend/: .env.example  .prettierignore  404.html  AGENTS.md  README.md  eslint.config.js  index.html  netlify.toml  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
my_app/: charts.py  footer.py  my_classes.py  navbar.py  utils.py
pages/: about.py  home.py  install.py  not_found_404.py  raw_data.py  settings.py
tests/: calc_risk_epw.py  check_model_output.py  check_phs_output.py  discussion_model_results.tex  locustfile.py  met_clo_tables.xlsx  sports.tex  summary_results.tex  test_404.py  test_about.py  (+5 more)
(+117 files in other folders)
