[project]
name = "sma-extreme-heat-backend"
version = "0.1.0"
description = "FastAPI backend for SMA Extreme Heat Policy risk calculation"
readme = "README.md"
authors = [
    { name = "Yehui Huang", email = "yehui.usyd@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "pandas==3.0.3",
    "pvlib==0.15.1",
    "pydantic-settings==2.14.1",
    "pythermalcomfort==3.9.8",
    "timezonefinder==8.2.4",
    "uvicorn[standard]==0.49.0",
]

[project.scripts]
sma-extreme-heat-backend = "sma_extreme_heat_backend.main:main"

[build-system]
requires = ["uv_build==0.11.19"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
